# intro_jax

./: .gitignore  LICENSE  README.md
intro_jax_project/: JAX Random State_Thread Safety.md  how_to_think_in_JAX.py  jax_random_nums.py  jax_sharp_bits.py  pyproject.toml
intro_jax_project/networks/: log_regress_model.py  mlp.py  mlp_training.py  simple_classifier.py
intro_jax_project/networks/my_checkpoints/my_model100/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
intro_jax_project/networks/my_checkpoints/my_model100/array_metadatas/: process_0
intro_jax_project/networks/my_checkpoints/my_model100/ocdbt.process_0/: manifest.ocdbt
intro_jax_project/notes_and_examples/: how_to_think_in_JAX.py  jax_funcs..ipynb
