[project]
name = "intro-jax-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14" #flax needs <3.14
dependencies = [
    "flax>=0.12.2",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optax>=0.2.7",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
